--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,8 +1,11 @@
 {
   "dependencies": {
+    "ayellowpaper.serialized-dictionary": "https://github.com/aestheticianlabs/SerializedDictionary.git",
+    "com.dbrizov.naughtyattributes": "https://github.com/dbrizov/NaughtyAttributes.git#upm",
+    "com.intothedev.multitags": "https://github.com/IntoTheDev/MultiTag-System-for-Unity.git",
     "com.unity.collab-proxy": "2.10.2",
     "com.unity.feature.2d": "2.0.1",
-    "com.unity.ide.rider": "3.0.38",
+    "com.unity.ide.rider": "3.0.39",
     "com.unity.ide.visualstudio": "2.0.26",
     "com.unity.inputsystem": "1.17.0",
     "com.unity.multiplayer.center": "1.0.0",
