--- a/.gitignore
+++ b/.gitignore
@@ -129,3 +129,4 @@ bakery_times.log
 /[Aa]ssets/AddressableAssetsData/Android/*
 /[Aa]ssets/AddressableAssetsData/Android.meta
 /[Aa]ssets/AddressableAssetsData/link.xml
+.vsconfig
