--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -3,6 +3,7 @@
     "ayellowpaper.serialized-dictionary": "https://github.com/aestheticianlabs/SerializedDictionary.git",
     "com.dbrizov.naughtyattributes": "https://github.com/dbrizov/NaughtyAttributes.git#upm",
     "com.intothedev.multitags": "https://github.com/IntoTheDev/MultiTag-System-for-Unity.git",
+    "com.unity.addressables": "2.7.6",
     "com.unity.collab-proxy": "2.10.2",
     "com.unity.feature.2d": "2.0.1",
     "com.unity.ide.rider": "3.0.39",
