setup test scene correctly

--- a/.gitignore
+++ b/.gitignore
@@ -130,3 +130,5 @@ bakery_times.log
 /[Aa]ssets/AddressableAssetsData/Android.meta
 /[Aa]ssets/AddressableAssetsData/link.xml
 .vsconfig
+
+GGJAmF-2026.slnx
